--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Structural Estimation of the Buffer-Stock Model"
+    "# Illustrate the iEGM through the Buffer-Stock Model"
    ]
   },
   {
@@ -16,42 +16,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Buffer-Stock Consumption-Saving Model"
+    "import matplotlib.pyplot as plt\n",
+    "from BufferStockModel import BufferStockModelClass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load local model file and initialize model class\n",
-    "from BufferStockModel import BufferStockModelClass\n",
-    "model = BufferStockModelClass(par={'num_C':10})\n",
+    "specs = {\n",
+    "    'rho':1.5,\n",
+    "\n",
+    "    'num_C':10,\n",
+    "    'max_C':5.0,\n",
+    "    'max_m':5.0,\n",
+    "}\n",
+    "\n",
+    "model = BufferStockModelClass(par=specs)\n",
     "par = model.par\n",
     "sol = model.sol\n",
     "sim = model.sim"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Illustrate the pre-computation of consumption interpolator"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solve the model using VFI, EGM and iEGM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -110,58 +134,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.64 s\n",
-      "Wall time: 210 ms\n",
-      "Wall time: 245 ms\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-88c9bcc7168f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'time'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'model.solve()'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mstop\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'stop' is not defined"
+      "2.78 s ± 400 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "177 ms ± 20.3 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "164 ms ± 14.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "par.method='vfi'\n",
-    "%time model.solve()\n",
+    "%timeit model.solve()\n",
     "par.method='egm'\n",
-    "%time model.solve()\n",
+    "%timeit model.solve()\n",
     "par.method='iegm'\n",
-    "%time model.solve()\n",
-    "\n",
-    "stop"
+    "%timeit model.solve()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solve the model"
+    "## Compare accuracy"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.solve()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.simulate()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
