added Euler error calculation

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -39,27 +30,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load local model file and initialize model class\n",
-    "specs = {\n",
-    "    'rho':1.5,\n",
-    "\n",
-    "    'num_C':10,\n",
-    "    'max_C':5.0,\n",
-    "    'max_m':5.0,\n",
-    "}\n",
-    "\n",
-    "model = BufferStockModelClass(par=specs)\n",
-    "par = model.par\n",
-    "sol = model.sol\n",
-    "sim = model.sim"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,7 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load local model file and initialize model class\n",
+    "plt.rcParams.update({'font.size': 14})\n",
+    "\n",
+    "SAVE = True\n",
+    "specs = {\n",
+    "    'rho':1.5,\n",
+    "\n",
+    "    'num_C':10,\n",
+    "    'max_C':5.0,\n",
+    "}\n",
+    "\n",
+    "model = BufferStockModelClass(par=specs)\n",
+    "par = model.par\n",
+    "\n",
+    "# pre-compute consumption\n",
+    "model.precompute_C()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +92,6 @@
    ],
    "source": [
     "# illustrate the iEGM pre-computation\n",
-    "model.precompute_C()\n",
-    "\n",
-    "plt.rcParams.update({'font.size': 14})\n",
-    "\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(par.grid_C,par.grid_marg_U)\n",
     "ax.set(xlabel='C (consumption)',ylabel=\"$U\\'(C)$ (marginal utility)\");\n",
@@ -115,7 +105,7 @@
     "ax.set(xlabel='$U\\'(C)$ (marginal utility)',ylabel=\"C (consumption)\");\n",
     "ax.legend();\n",
     "fig.tight_layout()\n",
-    "fig.savefig('output/fig_illustrate_flip2.pdf')"
+    "if SAVE: fig.savefig('output/fig_illustrate_flip2.pdf')"
    ]
   },
   {
@@ -127,39 +117,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specs = {\n",
+    "    'rho':1.5,\n",
+    "\n",
+    "    'num_C':100,\n",
+    "    'max_C':5.0,\n",
+    "    'max_m':5.0,\n",
+    "\n",
+    "    'num_m':50,\n",
+    "    'T': 20,\n",
+    "\n",
+    "    'simN':10_000,\n",
+    "}\n",
+    "\n",
+    "model = BufferStockModelClass(par=specs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.78 s ± 400 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "177 ms ± 20.3 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "164 ms ± 14.4 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "vfi:\n",
+      "1.66 s ± 179 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "avg. log10 Euler error: -3.263 \n",
+      "\n",
+      "egm:\n",
+      "84.6 ms ± 5.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "avg. log10 Euler error: -4.238 \n",
+      "\n",
+      "iegm:\n",
+      "96.2 ms ± 7.6 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "avg. log10 Euler error: -3.780 \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "par.method='vfi'\n",
+    "model.par.method='vfi'\n",
+    "print(f'{model.par.method}:')\n",
     "%timeit model.solve()\n",
-    "par.method='egm'\n",
+    "\n",
+    "model.simulate()\n",
+    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "model.par.method='egm'\n",
+    "print(f'{model.par.method}:')\n",
     "%timeit model.solve()\n",
-    "par.method='iegm'\n",
-    "%timeit model.solve()"
+    "\n",
+    "model.simulate()\n",
+    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "model.par.method='iegm'\n",
+    "print(f'{model.par.method}:')\n",
+    "%timeit model.solve()\n",
+    "\n",
+    "model.simulate()\n",
+    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compare accuracy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
