MC buffer stock setup

--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Monte Carlo Settings"
    ]
   },
   {
@@ -20,13 +20,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MC_num = 10 # number of Monte Carlo simulations\n",
+    "C_num_grid = (10,20,50,100,200) # number of grid points in consumption grid i iEGM\n",
+    "specs = { # common specifications across methods\n",
+    "    'rho':1.5,\n",
+    "\n",
+    "    'max_C':5.0,\n",
+    "    'max_m':5.0,\n",
+    "\n",
+    "    'num_m':200,\n",
+    "    'T': 20,\n",
+    "\n",
+    "    'simN':10_000,\n",
+    "\n",
+    "} \n",
+    "\n",
+    "\n",
+    "MC_num = 10 # number of Monte Carlo simulations\n",
+    "C_num_grid = (10,20,50,100,200) # number of grid points in consumption grid i iEGM\n",
+    "specs = { # common specifications across methods\n",
+    "    'rho':1.5,\n",
+    "\n",
+    "    'max_C':5.0,\n",
+    "    'max_m':5.0,\n",
+    "\n",
+    "    'num_m':100,\n",
+    "    'T': 20,\n",
+    "\n",
+    "    'simN':1_000,\n",
+    "\n",
+    "} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load relevant packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import numpy as np\n",
-    "\n",
+    "from time import time\n",
     "import matplotlib.pyplot as plt\n",
-    "from BufferStockModel import BufferStockModelClass"
+    "from BufferStockModel import BufferStockModelClass\n",
+    "\n",
+    "plt.rcParams.update({'font.size': 14})"
    ]
   },
   {
@@ -38,22 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load local model file and initialize model class\n",
-    "plt.rcParams.update({'font.size': 14})\n",
-    "\n",
     "SAVE = True\n",
-    "specs = {\n",
+    "specs_illustrate = {\n",
     "    'rho':1.5,\n",
     "\n",
     "    'num_C':10,\n",
     "    'max_C':5.0,\n",
     "}\n",
     "\n",
-    "model = BufferStockModelClass(par=specs)\n",
+    "model = BufferStockModelClass(par=specs_illustrate)\n",
     "par = model.par\n",
     "\n",
     "# pre-compute consumption\n",
@@ -62,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "specs = {\n",
+    "specs_now = {\n",
     "    'rho':1.5,\n",
     "\n",
     "    'num_C':100,\n",
@@ -134,56 +179,185 @@
     "    'simN':10_000,\n",
     "}\n",
     "\n",
-    "model = BufferStockModelClass(par=specs)"
+    "model = BufferStockModelClass(par=specs_now)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.par.method='vfi'\n",
+    "# print(f'{model.par.method}:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='egm'\n",
+    "# print(f'{model.par.method}:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# print(f'{model.par.method}:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Monte Carlo Runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vfi:\n",
-      "1.66 s ± 179 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "avg. log10 Euler error: -3.263 \n",
-      "\n",
-      "egm:\n",
-      "84.6 ms ± 5.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "avg. log10 Euler error: -4.238 \n",
-      "\n",
-      "iegm:\n",
-      "96.2 ms ± 7.6 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "avg. log10 Euler error: -3.780 \n",
-      "\n"
+      "1/10 running... vfi... egm... egm...\n",
+      "2/10 running... vfi... egm... egm...\n",
+      "3/10 running... vfi... egm... egm...\n",
+      "4/10 running... vfi... egm... egm...\n",
+      "5/10 running... vfi... egm... egm...\n",
+      "6/10 running... vfi... egm... egm...\n",
+      "7/10 running... vfi... egm... egm...\n",
+      "8/10 running... vfi... egm... egm...\n",
+      "9/10 running... vfi... egm... egm...\n",
+      "10/10 running... vfi... egm... egm...\n"
      ]
     }
    ],
    "source": [
-    "model.par.method='vfi'\n",
-    "print(f'{model.par.method}:')\n",
-    "%timeit model.solve()\n",
+    "PRINT = True\n",
+    "timing = {\n",
+    "    'vfi':np.nan + np.zeros(MC_num),\n",
+    "    'egm':np.nan + np.zeros(MC_num),\n",
+    "    'iegm':dict(),\n",
+    "}\n",
+    "error = {\n",
+    "    'vfi':np.nan + np.zeros(MC_num),\n",
+    "    'egm':np.nan + np.zeros(MC_num),\n",
+    "    'iegm':dict(),\n",
+    "}\n",
+    "for i_c,num_C in enumerate(C_num_grid):\n",
+    "    timing['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
-    "model.simulate()\n",
-    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "for i_mc in range(MC_num):\n",
+    "    if PRINT: print(f'{i_mc+1}/{MC_num} running...',end='')\n",
+    "    model = BufferStockModelClass(par=specs)\n",
+    "    model.par.seed = i_mc\n",
+    "    model.allocate()\n",
     "\n",
+    "    # VFI and EGM\n",
+    "    for method in ['vfi','egm']:\n",
+    "        if PRINT: print(f' {method}...',end='')\n",
+    "        model.par.method = method\n",
+    "        \n",
+    "        # Timing\n",
+    "        t0 = time()\n",
+    "        model.solve()\n",
+    "        timing[model.par.method][i_mc] = time() - t0\n",
     "\n",
-    "model.par.method='egm'\n",
-    "print(f'{model.par.method}:')\n",
-    "%timeit model.solve()\n",
+    "        # Euler error\n",
+    "        model.simulate()\n",
+    "        error[model.par.method][i_mc] = model.sim.mean_log10_euler\n",
     "\n",
-    "model.simulate()\n",
-    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "    # iEGM\n",
+    "    model.par.method = 'iegm'\n",
+    "    if PRINT: print(f' {model.par.method}...')\n",
+    "    for i_c,num_C in enumerate(C_num_grid):\n",
+    "        model.par.num_C = num_C\n",
+    "        model.allocate()\n",
     "\n",
+    "        # Timing\n",
+    "        t0 = time()\n",
+    "        model.solve()\n",
+    "        timing[model.par.method][num_C][i_mc] = time() - t0\n",
     "\n",
-    "model.par.method='iegm'\n",
-    "print(f'{model.par.method}:')\n",
-    "%timeit model.solve()\n",
+    "        # Euler error\n",
+    "        model.simulate()\n",
+    "        error[model.par.method][num_C][i_mc] = model.sim.mean_log10_euler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timing (rel. to VFI)\n",
+      "vfi: 1.000 \n",
+      "egm: 0.059 \n",
+      "iegm: \n",
+      "10: 0.053 \n",
+      "20: 0.049 \n",
+      "50: 0.053 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Timing (rel. to VFI)')\n",
+    "timing_vfi = np.mean(timing['vfi'])\n",
+    "for method in ['vfi','egm']:\n",
+    "    time_now = np.mean(timing[method]) / timing_vfi\n",
+    "    print(f'{method}: {time_now:2.3f} ')\n",
     "\n",
-    "model.simulate()\n",
-    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')"
+    "        \n",
+    "method = 'iegm'\n",
+    "print(f'{method}: ')\n",
+    "for i_c,num_C in enumerate(C_num_grid):\n",
+    "    time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
+    "    print(f'{num_C:d}: {time_now:2.3f} ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Euler Error\n",
+      "vfi: -3.262 \n",
+      "egm: -4.238 \n",
+      "iegm: \n",
+      "10: -2.077 \n",
+      "20: -2.571 \n",
+      "50: -3.306 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Euler Error')\n",
+    "for method in ['vfi','egm']:\n",
+    "    error_now = np.mean(error[method])\n",
+    "    print(f'{method}: {error_now:2.3f} ')\n",
+    "\n",
+    "method = 'iegm'\n",
+    "print(f'{method}: ')\n",
+    "for i_c,num_C in enumerate(C_num_grid):\n",
+    "    error_now = np.mean(error[method][num_C]) \n",
+    "    print(f'{num_C:d}: {error_now:2.3f} ')"
    ]
   }
  ],
