--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +218,15 @@
     "# %timeit model.solve()\n",
     "\n",
     "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "\n",
+    "\n",
+    "# model.par.method='iegm'\n",
+    "# model.par.interp_inverse = True\n",
+    "# print(f'{model.par.method}, inverse:')\n",
+    "# %timeit model.solve()\n",
+    "\n",
+    "# model.simulate()\n",
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')"
    ]
   },
@@ -221,42 +239,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/10 running... vfi... egm... egm...\n",
-      "2/10 running... vfi... egm... egm...\n",
-      "3/10 running... vfi... egm... egm...\n",
-      "4/10 running... vfi... egm... egm...\n",
-      "5/10 running... vfi... egm... egm...\n",
-      "6/10 running... vfi... egm... egm...\n",
-      "7/10 running... vfi... egm... egm...\n",
-      "8/10 running... vfi... egm... egm...\n",
-      "9/10 running... vfi... egm... egm...\n",
-      "10/10 running... vfi... egm... egm...\n"
+      "1/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "2/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "3/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "4/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "5/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "6/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "7/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "8/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "9/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n",
+      "10/10 running... vfi... egm... iegm...\n",
+      " iegm, inverse...\n"
      ]
     }
    ],
    "source": [
     "PRINT = True\n",
+    "# setup Monte Carlo results containers\n",
     "timing = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
     "    'iegm':dict(),\n",
+    "    'iegm, inverse':dict(),\n",
     "}\n",
     "error = {\n",
     "    'vfi':np.nan + np.zeros(MC_num),\n",
     "    'egm':np.nan + np.zeros(MC_num),\n",
     "    'iegm':dict(),\n",
+    "    'iegm, inverse':dict(),\n",
     "}\n",
     "for i_c,num_C in enumerate(C_num_grid):\n",
     "    timing['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
     "    error['iegm'][num_C] = np.nan + np.zeros(MC_num)\n",
     "\n",
+    "    timing['iegm, inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "    error['iegm, inverse'][num_C] = np.nan + np.zeros(MC_num)\n",
+    "\n",
+    "# loop over Monte Carlo simulations\n",
     "for i_mc in range(MC_num):\n",
     "    if PRINT: print(f'{i_mc+1}/{MC_num} running...',end='')\n",
     "    model = BufferStockModelClass(par=specs)\n",
@@ -265,7 +300,6 @@
     "\n",
     "    # VFI and EGM\n",
     "    for method in ['vfi','egm']:\n",
-    "        if PRINT: print(f' {method}...',end='')\n",
     "        model.par.method = method\n",
     "        \n",
     "        # Timing\n",
@@ -278,86 +312,85 @@
     "        error[model.par.method][i_mc] = model.sim.mean_log10_euler\n",
     "\n",
     "    # iEGM\n",
-    "    model.par.method = 'iegm'\n",
-    "    if PRINT: print(f' {model.par.method}...')\n",
-    "    for i_c,num_C in enumerate(C_num_grid):\n",
-    "        model.par.num_C = num_C\n",
-    "        model.allocate()\n",
+    "    for interp_inverse in (False,True):\n",
+    "        model.par.interp_inverse = interp_inverse\n",
+    "        model.par.method = 'iegm'\n",
+    "        method = f'{model.par.method}, inverse' if interp_inverse else model.par.method\n",
+    "        for i_c,num_C in enumerate(C_num_grid):\n",
+    "            model.par.num_C = num_C\n",
+    "            model.allocate()\n",
     "\n",
-    "        # Timing\n",
-    "        t0 = time()\n",
-    "        model.solve()\n",
-    "        timing[model.par.method][num_C][i_mc] = time() - t0\n",
+    "            # Timing\n",
+    "            t0 = time()\n",
+    "            model.solve()\n",
+    "            timing[method][num_C][i_mc] = time() - t0\n",
     "\n",
-    "        # Euler error\n",
-    "        model.simulate()\n",
-    "        error[model.par.method][num_C][i_mc] = model.sim.mean_log10_euler\n"
+    "            # Euler error\n",
+    "            model.simulate()\n",
+    "            error[method][num_C][i_mc] = model.sim.mean_log10_euler\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timing (rel. to VFI)\n",
-      "vfi: 1.000 \n",
-      "egm: 0.059 \n",
-      "iegm: \n",
-      "10: 0.053 \n",
-      "20: 0.049 \n",
-      "50: 0.053 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('Timing (rel. to VFI)')\n",
-    "timing_vfi = np.mean(timing['vfi'])\n",
-    "for method in ['vfi','egm']:\n",
-    "    time_now = np.mean(timing[method]) / timing_vfi\n",
-    "    print(f'{method}: {time_now:2.3f} ')\n",
+    "# print('Timing (rel. to VFI)')\n",
+    "# timing_vfi = np.mean(timing['vfi'])\n",
+    "# for method in ['vfi','egm']:\n",
+    "#     time_now = np.mean(timing[method]) / timing_vfi\n",
+    "#     print(f'{method}: {time_now:2.2f} ')\n",
     "\n",
     "        \n",
-    "method = 'iegm'\n",
-    "print(f'{method}: ')\n",
-    "for i_c,num_C in enumerate(C_num_grid):\n",
-    "    time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
-    "    print(f'{num_C:d}: {time_now:2.3f} ')"
+    "# for method in ('iegm','iegm, inverse'):\n",
+    "#     print(f'{method}: ')\n",
+    "#     for i_c,num_C in enumerate(C_num_grid):\n",
+    "#         time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
+    "#         print(f'{num_C:d}: {time_now:2.2f} ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euler Error\n",
-      "vfi: -3.262 \n",
-      "egm: -4.238 \n",
+      "Euler Error & Timing (rel. to VFI)\n",
+      "vfi: -3.486 & 1.000 \n",
+      "egm: -4.934 & 0.052 \n",
       "iegm: \n",
-      "10: -2.077 \n",
-      "20: -2.571 \n",
-      "50: -3.306 \n"
+      "10 -2.089 & 0.062 \n",
+      "20 -2.544 & 0.055 \n",
+      "50 -3.281 & 0.055 \n",
+      "100 -3.765 & 0.058 \n",
+      "200 -4.236 & 0.069 \n",
+      "iegm, inverse: \n",
+      "10 -2.686 & 0.062 \n",
+      "20 -3.276 & 0.063 \n",
+      "50 -4.018 & 0.060 \n",
+      "100 -4.501 & 0.059 \n",
+      "200 -4.777 & 0.053 \n"
      ]
     }
    ],
    "source": [
-    "print('Euler Error')\n",
-    "for method in ['vfi','egm']:\n",
+    "print('Euler Error & Timing (rel. to VFI)')\n",
+    "timing_vfi = np.mean(timing['vfi'])\n",
+    "for method in ('vfi','egm'):\n",
     "    error_now = np.mean(error[method])\n",
-    "    print(f'{method}: {error_now:2.3f} ')\n",
+    "    time_now = np.mean(timing[method]) / timing_vfi\n",
+    "    print(f'{method}: {error_now:2.3f} & {time_now:2.3f} ')\n",
     "\n",
-    "method = 'iegm'\n",
-    "print(f'{method}: ')\n",
-    "for i_c,num_C in enumerate(C_num_grid):\n",
-    "    error_now = np.mean(error[method][num_C]) \n",
-    "    print(f'{num_C:d}: {error_now:2.3f} ')"
+    "for method in ('iegm','iegm, inverse'):\n",
+    "    print(f'{method}: ')\n",
+    "    for i_c,num_C in enumerate(C_num_grid):\n",
+    "        error_now = np.mean(error[method][num_C]) \n",
+    "        time_now = np.mean(timing[method][num_C]) / timing_vfi\n",
+    "        print(f'{num_C:d} {error_now:2.3f} & {time_now:2.3f} ')"
    ]
   }
  ],
