--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +184,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iegm:\n",
+      "69.9 ms ± 8.79 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "avg. log10 Euler error: -3.780 \n",
+      "\n",
+      "iegm:, chebyshev\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bnl429\\Dropbox\\Projects\\2024_iEGM\\iEGM\\InterpolationFunctions.py:114: RuntimeWarning: invalid value encountered in arccos\n",
+      "  return np.cos(n*np.arccos(x))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "696 ms ± 90.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "avg. log10 Euler error: nan \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bnl429\\Dropbox\\Projects\\2024_iEGM\\iEGM\\BufferStockModel.py:357: RuntimeWarning: Mean of empty slice\n",
+      "  sim.mean_log10_euler = np.nanmean(np.log10( abs(sim.euler/sim.c) + 1.0e-16));\n"
+     ]
+    }
+   ],
    "source": [
     "# model.par.method='vfi'\n",
     "# print(f'{model.par.method}:')\n",
@@ -213,12 +241,12 @@
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
     "\n",
     "\n",
-    "# model.par.method='iegm'\n",
-    "# print(f'{model.par.method}:')\n",
-    "# %timeit model.solve()\n",
+    "model.par.method='iegm'\n",
+    "print(f'{model.par.method}:')\n",
+    "%timeit model.solve()\n",
     "\n",
-    "# model.simulate()\n",
-    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "model.simulate()\n",
+    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
     "\n",
     "\n",
     "# model.par.method='iegm'\n",
@@ -231,6 +259,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -239,33 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "2/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "3/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "4/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "5/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "6/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "7/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "8/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "9/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n",
-      "10/10 running... vfi... egm... iegm...\n",
-      " iegm, inverse...\n"
+      "1/10 running...2/10 running...3/10 running...4/10 running...5/10 running...6/10 running...7/10 running...8/10 running...9/10 running...10/10 running..."
      ]
     }
    ],
@@ -332,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,19 +379,19 @@
      "text": [
       "Euler Error & Timing (rel. to VFI)\n",
       "vfi: -3.486 & 1.000 \n",
-      "egm: -4.934 & 0.052 \n",
+      "egm: -4.934 & 0.053 \n",
       "iegm: \n",
-      "10 -2.089 & 0.062 \n",
+      "10 -2.089 & 0.069 \n",
       "20 -2.544 & 0.055 \n",
       "50 -3.281 & 0.055 \n",
-      "100 -3.765 & 0.058 \n",
-      "200 -4.236 & 0.069 \n",
+      "100 -3.765 & 0.063 \n",
+      "200 -4.236 & 0.060 \n",
       "iegm, inverse: \n",
-      "10 -2.686 & 0.062 \n",
-      "20 -3.276 & 0.063 \n",
-      "50 -4.018 & 0.060 \n",
-      "100 -4.501 & 0.059 \n",
-      "200 -4.777 & 0.053 \n"
+      "10 -2.686 & 0.055 \n",
+      "20 -3.276 & 0.054 \n",
+      "50 -4.018 & 0.056 \n",
+      "100 -4.501 & 0.054 \n",
+      "200 -4.777 & 0.054 \n"
      ]
     }
    ],
