--- a/01. BufferStockModel.ipynb
+++ b/01. BufferStockModel.ipynb
@@ -241,12 +241,12 @@
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
     "\n",
     "\n",
-    "model.par.method='iegm'\n",
-    "print(f'{model.par.method}:')\n",
-    "%timeit model.solve()\n",
+    "# model.par.method='iegm'\n",
+    "# print(f'{model.par.method}:')\n",
+    "# %timeit model.solve()\n",
     "\n",
-    "model.simulate()\n",
-    "print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
+    "# model.simulate()\n",
+    "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')\n",
     "\n",
     "\n",
     "# model.par.method='iegm'\n",
@@ -256,15 +256,6 @@
     "\n",
     "# model.simulate()\n",
     "# print(f'avg. log10 Euler error: {model.sim.mean_log10_euler:.3f} \\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop"
    ]
   },
   {
